fixed logo on iphone

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -238,3 +238,17 @@ ul.lines-of-business li > a.lob4{
 			display:none;
 		}
 	}
+	@media only screen and (min-width : 567px)and (max-width:764px){
+		#cust-logo img.customer-img {
+			width: 40%;
+			margin: 0 0 0 5%;
+		}
+		#collapseCustomers{
+			width:100%;
+			margin:5px 0 5px 0;
+		}
+		.panel-heading, .panel-body{
+			width:100%;
+		}
+	}
+	
